Fix misaligned logos

--- a/src/components/section.module.css
+++ b/src/components/section.module.css
@@ -9,7 +9,7 @@
 
 .introLogo {  
     display: inline-block;
-    vertical-align: middle;
+    vertical-align: middle !important;
     margin-right:20px;
 }
 
